Added more donator routes
