# frameworks/Backend/controllers/donator/donateFund.js
@@ -7,15 +7,19 @@ const donateToFund = async (req, res) => {
     const errors = validationResult(req);
     console.log(errors);
     if (!errors.isEmpty()) {
-      return res
-        .status(422)
-        .json({ message: "Validation failed.", error: errors.array() });
+      const error = new Error("Validation failed, entered data is incorrect");
+      error.status = 422;
+      throw error;
     }
 
     const fundID = req.params.id;
     const { userID, amount, organizationID } = req.body;
 
-    if (amount <= 0) throw new Error("amount has to be above 0");
+    if (amount <= 0) {
+      const error = new Error("Donation amount has to be higher than 0");
+      error.status = 400;
+      throw error;
+    }
 
     const newFund = new FundDonation({
       userID,
@@ -24,47 +28,24 @@ const donateToFund = async (req, res) => {
       organizationID,
     });
 
-    newFund
-      .save()
-      .then(async () => {
-        await Fund.findById(fundID)
-          .then(async (fund) => {
-            // var previousAmount = fund.currentAmount;
-            var newAmount = parseInt(amount) + fund.currentAmount;
-            var updateFund = {};
-            if (newAmount === fund.budget) {
-              updateFund = {
-                currentAmount: newAmount,
-                status: "completed",
-              };
-            } else {
-              updateFund = {
-                currentAmount: newAmount,
-              };
-            }
-            await Fund.findByIdAndUpdate(fundID, updateFund)
-              .then(() => {
-                res.status(201).json({
-                  message: "Donated successfully",
-                });
-              })
-              .catch((err) => {
-                res.status(500).json({
-                  message: err,
-                });
-              });
-          })
-          .catch((err) => {
-            res.status(500).json({
-              message: err,
-            });
-          });
-      })
-      .catch((err) => {
-        res.status(500).json({
-          message: err,
-        });
-      });
+    newFund.save();
+    const fund = await Fund.findById(fundID);
+    let newAmount = parseInt(amount) + fund.currentAmount;
+    let updateFund = {};
+    if (newAmount >= fund.budget) {
+      updateFund = {
+        currentAmount: newAmount,
+        status: "completed",
+      };
+    } else {
+      updateFund = {
+        currentAmount: newAmount,
+      };
+    }
+    await Fund.findByIdAndUpdate(fundID, updateFund);
+    res.status(201).json({
+      message: "Donated successfully",
+    });
   } catch (error) {
     console.log(error);
   }
