# frameworks/Backend/controllers/donator/getOneDonation.js
@@ -4,18 +4,15 @@ const Item = require("../../models/item.model");
 const getOneDonationDetails = async (req, res) => {
   try {
     const donationId = req.params.id;
-    await Donation.findOne({ _id: donationId }).populate('wantedItems.item')
-      .then((donation) => {
-        res
-          .status(200)
-          .send({ message: "Donation fetched", donation: donation });
-      })
-      .catch((err) => {
-        console.log(err);
-        res.status(500).send({ status: "error", error: err });
-      });
-  } catch (error) {
-    console.log(error);
+    donation = await Donation.findOne({ _id: donationId }).populate(
+      "wantedItems.item"
+    );
+    res.status(200).send({ message: "Donation fetched", donation: donation });
+  } catch (err) {
+    if (!err.statusCode) {
+      err.statusCode = 500;
+    }
+    next(err);
   }
 };
 
